--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<h1>Welcome to PairBnB</h1>
+
 	<% if signed_in? %>
 		Signed in as: <%= current_user.email %>
 		<%= button_to 'Sign out', sign_out_path, method: :delete %>
