--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,32 +1,32 @@
 
 <div class="title-field">
 	<%= form.label :title %>
-	<%= form.text_field :title %>
+	<%= form.text_field :title, :required => true %>
 </div>
 
 <div class="bedroom-field">
 	<%= form.label :bedroom %>
-	<%= form.text_field :bedroom %>
+	<%= form.text_field :bedroom, :required => true %>
 </div>
 
 <div class="bathroom-field">
 	<%= form.label :bathroom %>
-	<%= form.text_field :bathroom %>
+	<%= form.text_field :bathroom, :required => true %>
 </div>
 
 <div class="checkin-field">
 	<%= form.label :checkin %>
-	<%= form.text_field :checkin %>
+	<%= form.text_field :checkin, :required => true %>
 </div>
 
 <div class="checkout-field">
 	<%= form.label :checkout %>
-	<%= form.text_field :checkout %>
+	<%= form.text_field :checkout, :required => true %>
 </div>
 
 <div class="number_of_guest-field">
 	<%= form.label :number_of_guest %>
-	<%= form.text_field :number_of_guest %>
+	<%= form.text_field :number_of_guest, :required => true %>
 </div>
 
 <div class="description-field">
@@ -41,6 +41,10 @@
 
 <div class="price-field">
 	<%= form.label :price %>
-	<%= form.text_field :price %>
+	<%= form.text_field :price, :required => true %>
+</div>
+
+<div class="image-field">
+<%= form.file_field :image %>
 </div>
 
