--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,6 +1,13 @@
 <h1>Editing Listing</h1>
 
-<%= form_for @listing do |f| %>
+<%= form_for @listing, :html => {multipart => true} do |f| %>
 	<%= render partial: 'listings/form', object: f %>
-	<p><%= button_to 'Update Listing' %></p>
+		<%= f.label :tag %><br>
+		<%= f.fields_for :tags do |x| %>
+			<%= x.label :Property_Type %>
+			<%= x.select :property_type, ['None', 'Apartment', 'House', 'Room', 'Shared Room']%><br>
+			<%= x.label :Cancellation %>
+			<%= x.select :cancellation, ['None', 'Strict', 'Moderate', 'Flexible'] %><br>
+		<% end %>
+	<p><%= f.submit 'Update Listing' %></p>
 <% end %>
